添加全局表格样式

--- a/src/common-ui/packages/common.less
+++ b/src/common-ui/packages/common.less
@@ -1,3 +1,10 @@
 .ivu-select-dropdown {
   max-height: 400px !important;
 }
+// 表格tag标签换行显示
+.ivu-table .ivu-tag {
+  display: inline-block;
+  line-height: 16px;
+  height: auto;
+  padding: 5px 6px;
+}
